[package]
name = "monerod-exporter"
description = "Expose monerod metrics in prometheus format"
version = "0.0.1"
edition = "2021"
repository = "/home/gotzl/workspace/monerod-exporter"

[dependencies]
anyhow = "1.0.51"
argh = "0.1.7"
monero-rpc = { path = "/home/gotzl/workspace/monero-rpc-rs" }
lazy_static = "1.4.0"
prometheus = "0.13.0"
hyper = { version = "^0.14", features = ["server", "http1", "tcp"] }
tokio = { version = "^1.0", features = ["macros", "rt-multi-thread"] }
env_logger = "0.9.0"
log = "0.4.14"
serde = "1.0.132"
serde_yaml = "0.9.16"
thiserror = "1.0.30"
